--- a/vocab/templates/vocab.html
+++ b/vocab/templates/vocab.html
@@ -80,36 +80,100 @@
 <br />
 <div class="row">
   <div class="col-xs-6 text-center">
-  <form id="entry" method="POST" action="/_check">
+  <form id="entry">
     <label for="attempt">Word:</label>
     <input id="attempt" name="attempt" type="text" width="15"
       autocomplete="off"  autofocus />
-    <input type="submit" name="try" />
   </form>
 </div></div>
 
 <br />
+<p id="response"> </p>  <!-- JavaScript will insert text here -->
+<p id="tiles"> </p> <!-- Illustration of inserting graphics into page -->
 
-{% if session.matches|length is not equalto 0  %}
-<h2>You found </h2>
-<p id="results">
-  {% for match in session.matches %}
-  {{ match }} 
-  {% endfor %}
-</p>
-{% endif %}
+<script>
+// Suppress normal form submission
+$("#entry").submit( function(event) {
+   event.preventDefault();
+  });
 
+// On each keystroke, ask the server whether the current 
+// word is long enough. 
+//
+// We use 'keyup' because the form value
+// is updated before that event is generated.
+// keypress is triggered before the input field has been
+// updated.  Be aware that we'll see non-character keys like
+// shift and control, so make sure whatever you do with the
+// event does not depend on it being a letter. 
 
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <!-- Mismatch, already found, etc. "flashed" from Python -->
-    {% for message in messages %}
-      <p class="message">{{ message }}</p>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
+var txts = ["You found : "];
+var i = 0;
 
+$("#attempt").keyup(function(event) {
+   var txt = $("#attempt").val();  // Current content of the input field
+   var keycode = event.which;      // They key that just went up
+   var letter = String.fromCharCode(keycode);
 
+   // That letter might not be a letter ... it could be the
+   // the backspace key, or even the shift key, because 'keyup'
+   // catches all kinds of keys.  (Also, the difference between
+   // upper and lower case comes from state of shift key + key code,
+   // so ignoring the shift key we get only the upper case letters.
+
+   if (! "ABCDEFGHIJKLMNOPQRSTUVWXYZ".includes(letter)) { return }
+
+   $.getJSON( "/_check", { text: txt },
+              function(data) {
+                console.log(data);
+                rsval = data.result.match;
+                console.log("rsval: " + rsval)
+                if (rsval) {
+                   <!--$("#response").html("That's enough!");-->
+                   $("#attempt").val("");
+                   txts[++i] = txt;
+                   txts[++i] = ", "
+                   $("#response").html(txts);
+                }
+                <!--else {-->
+                   <!--$("#response").append(txt.length + " "); -->
+                <!--}-->
+                showTiles(txt);
+                success(rsval);
+               }
+           );
+   });
+
+// Demonstration of how we can insert graphical elements
+// into a page, possibly building up the URLs of the elements
+// dynamically.  In this case I have a set of Scrabble tiles with
+// point values and a consistent naming scheme that allows me to
+// generate a URL for each letter.  Browsers should cache the graphics
+// files so that http requests are sent only the first time each
+// element is encountered. 
+//
+function showTiles(text) {
+   text = text.toUpperCase();  // tiles are letter-A.png, etc.
+   tiles_html = "";  // Build up the html text of links
+   for (var i=0; i < text.length; i++) {
+       letter = text.charAt(i);
+       if (! "ABCDEFGHIJKLMNOPQRSTUVWXYZ".includes(letter)) {
+          continue;
+       }
+       var tileURL = "/static/img/letter-" + letter + ".png";
+       var tileLink = "<img src='" + tileURL +
+           "' style='border: 0px; margin: 0px;'/>";
+       tiles_html = tiles_html + tileLink;
+    }
+    $("#tiles").html(tiles_html);
+    // alert("Inserted html: " + tiles_html);
+}
+function success(response){
+    if (response.redirect !== undefined && response.redirect){
+        window.location.href = response.redirect_url
+    }
+}
+</script>
 
  </div> <!-- container -->
 </body> </html>
